tests/fixtures/guardrails/invalid/member-fetch-direct-admin-access/scripts/backfill.mjs
const api = {
  path: "/admin" + "/api/2026-01/graphql.json",
};

export async function runBackfill() {
  return fetch(api.path);
}
